# stl2obj

./: CMakeLists.txt  README.md
example/: Fidgit.stl
src/: Makefile  exportobj.cpp  exportobj.h  exportstl.cpp  exportstl.h  geombase.h  geometry.h  importobj.cpp  importobj.h  importstl.cpp  importstl.h  kdtree.h  obj2stl.cpp  stl2obj.cpp  vectornd.h  visitor.h
test/: kdtree_test.cpp  vectornd_test.cpp
